Fix a problem where a low prep time crashes the app because of not connecting to devices

--- a/Ghosting Connector/Base.lproj/Main.storyboard
+++ b/Ghosting Connector/Base.lproj/Main.storyboard
@@ -1084,7 +1084,7 @@
         <scene sceneID="scX-UX-Ja1">
             <objects>
                 <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="HAa-pq-V0O" customClass="NumberedWorkoutCheckPopupViewController" customModule="Ghost_Connect" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" alpha="0.90000000000000002" contentMode="scaleToFill" id="mng-T0-CgN">
+                    <view key="view" contentMode="scaleToFill" id="mng-T0-CgN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -1095,10 +1095,10 @@
                                     <view contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pN0-iI-vGG" customClass="M13Checkbox" customModule="M13Checkbox">
                                         <rect key="frame" x="55" y="55" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.10127498129857494" green="0.11455700723662345" blue="0.13314167195533" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.057858891757857876" green="0.086659311009126688" blue="0.10481429860761415" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.099434879692187284" green="0.11247557971784058" blue="0.13072257297055845" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.05148264021" green="0.085889019070000003" blue="0.10588542369999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
@@ -1942,10 +1942,10 @@
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHz-fm-Lbv" customClass="M13Checkbox" customModule="M13Checkbox">
                                         <rect key="frame" x="55" y="55" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.15672284497809663" green="0.17204905710519042" blue="0.19692024830634214" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.05148264021" green="0.085889019070000003" blue="0.10588542369999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.152013520674707" green="0.17194981193486586" blue="0.19984535215837562" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.043802343309999998" green="0.0858047381" blue="0.109807469" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
